# watchify

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yaml
requirements/: dev.txt
tests/: conftest.py  test_functions.py  test_spies.py  test_watchers.py
tests/fixtures/: generic.py  watchers.py
watchers/: __init__.py  abstract.py  exceptions.py  functions.py  spies.py  watchers.py
watchify/: spies.py  watchers.py
