[tool.poetry]
name = "watchers"
version = "0.1.0"
description = ""
authors = ["Daniel Augusto <dev.daniel.augusto@gmail.com>"]
readme = "README.md"

[tool.coverage.run]
branch = true
source = ["watchify"]

[tool.coverage.report]
precision = 2
fail_under = 95.00
skip_empty = true

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.0"
flake8 = "^7.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
